Added confirmation to new sign ups
Fixed tests and removed redundant stub user signup function

Tests for confirmation code

Added a few comments

--- a/i18n/resources-locale_es-ES.json
+++ b/i18n/resources-locale_es-ES.json
@@ -20,9 +20,10 @@
     "notification.friendRemoved" : "Amigo en Lokki eliminado: %friendName%",
     "notification.friendDeclinedInvitation" : "%friendName% ha rechazado su invitación de amigo en Lokki",
     "signup.userEmailSubject" : "Bienvenido a Lokki.",
-    "signup.userEmailText" : "Bienvenido a Lokki 3.0 y gracias por registrarte.",
+    "signup.userEmailText" : "Bienvenido a Lokki 3.0 y gracias por registrarte. Account confirmation link: %confirmationCode%",
     "invite.userInvitedToLokkiEmailSubject" : "Únete a mí en Lokki.",
     "invite.userInvitedToLokkiEmailText" : "Hola, %targetUser%:\n\nTu amigo %senderUser% te invita a usar Lokki.",
+    "confirm.serverMessage": "<html><body>Dear Lokki user,<br/><br/>Your account has been successfully verified.</body></html>",
     "reset.emailSubject": "Confirmar el registro en Lokki",
     "reset.emailText": "Tienes que confirmar tu cuenta de Lokki. Haz clic en %resetLink% para ello. Este enlace será válido durante 24 horas. Asegúrate de iniciar sesión en Lokki durante las dos horas siguientes a la confirmación de tu cuenta. Esto no afectará a tu configuración y tus contactos existentes en Lokki.\n\nTen en cuenta que no puedes utilizar la misma dirección de correo electrónico para varias cuentas de Lokki o varios dispositivos.",
     "reset.serverMessage": "<html><body>Estimado usuario de Lokki:<br/><br/>Ahora puedes iniciar sesión en Lokki. Esta autorización es válida durante dos horas. Después de iniciar sesión, Lokki incluirá los mismos contactos y la misma configuración que antes.<br/><br/>Ten en cuenta que no puedes usar la misma dirección de correo electrónico para varias cuentas de Lokki o varios dispositivos.</body></html>",
