--- a/i18n/resources-locale_fi-FI.json
+++ b/i18n/resources-locale_fi-FI.json
@@ -20,9 +20,10 @@
     "notification.friendRemoved" : "Lokki-ystävä poistettu: %friendName%",
     "notification.friendDeclinedInvitation" : "%friendName% kieltäytyi Lokki-ystäväkutsustasi",
     "signup.userEmailSubject" : "Tervetuloa Lokkiin!",
-    "signup.userEmailText" : "Tervetuloa Lokkiin, sovellukseen jonka avulla voit jakaa sijaintisi helposti, turvallisesti ja ilmaiseksi. Olet onnistuneesti rekisteröitynyt käyttäjäksi <b>%targetUser%</b> ja voit nyt kirjautua sisään sovellukseen.",
+    "signup.userEmailText" : "Tervetuloa Lokkiin, sovellukseen jonka avulla voit jakaa sijaintisi helposti, turvallisesti ja ilmaiseksi. Olet onnistuneesti rekisteröitynyt käyttäjäksi <b>%targetUser%</b> ja voit nyt kirjautua sisään sovellukseen. Käyttäjätilisi on nyt kokeilutilassa ja suljetaan 24 tunnin kuluttua. Klikkaa tätä tunnistautumislinkkiä vahvistaaksesi tilisi ja muuttaaksesi sen pysyväksi: %confirmationCode%",
     "invite.userInvitedToLokkiEmailSubject" : "Liity seuraani Lokkiin!",
     "invite.userInvitedToLokkiEmailText" : "Hei %targetUser%!\n\nYstäväsi %senderUser% on kutsunut sinut Lokkiin.",
+    "confirm.serverMessage": "<html><body>Hyvä Lokin käyttäjä<br/><br/>Käyttäjätilisi on vahvistettu onnistuneesti.</body></html>",
     "reset.emailSubject": "Vahvista Lokki -rekisteröityminen",
     "reset.emailText": "Sinun on vahvistettava Lokki-tilisi. Voit tehdä sen napsauttamalla seuraavaa linkkiä: %resetLink%. Tämä linkki on toiminnassa 24 tunnin ajan. Ota huomioon, että sinun on kirjauduttava Lokkiin kahden tunnin kuluessa siitä, kun olet vahvistanut tilisi. Tämä ei vaikuta Lokissa jo oleviin yhteystietoihisi ja asetuksiisi.\n\nMuista, että et voi käyttää samaa sähköpostiosoitetta kuin yhdessä Lokki-tilissä tai laitteessa.",
     "reset.serverMessage": "<html><body>Hyvä Lokin käyttäjä<br/><br/>Voit nyt kirjautua Lokkiin. Tämä valtuutus on voimassa kahden tunnin ajan. Yhteystietosi ja asetuksesi eivät muutu, kun kirjaudut Lokkiin.<br/><br/>Muista, että et voi käyttää samaa sähköpostiosoitetta kuin yhdessä Lokki-tilissä tai laitteessa.</body></html>",
