--- a/i18n/resources-locale_ru-RU.json
+++ b/i18n/resources-locale_ru-RU.json
@@ -20,9 +20,10 @@
     "notification.friendRemoved" : "Друг Lokki удален: %friendName%",
     "notification.friendDeclinedInvitation" : "Пользователь %friendName% отклонил приглашение твоего друга Lokki",
     "signup.userEmailSubject" : "Lokki приветствует вас!",
-    "signup.userEmailText" : "Благодарим за регистрацию в программе Lokki 3.0!",
+    "signup.userEmailText" : "Благодарим за регистрацию в программе Lokki 3.0! Account confirmation link: %confirmationCode%",
     "invite.userInvitedToLokkiEmailSubject" : "Приглашение в Lokki",
     "invite.userInvitedToLokkiEmailText" : "Здравствуйте, %targetUser%!\n\nВаш друг %senderUser% приглашает вас в Lokki",
+    "confirm.serverMessage": "<html><body>Dear Lokki user,<br/><br/>Your account has been successfully verified.</body></html>",
     "reset.emailSubject": "Подтверждение регистрации Lokki",
     "reset.emailText": "Вам нужно подтвердить учетную запись Lokki. Для этого нажмите ссылку %resetLink%. Ссылка будет действовать 24 часа. После подтверждения учетной записи нужно войти в Lokki в течение двух часов. Это действие не повлияет на текущие контакты и настройки Lokki.\n\nОбратите внимание, что один адрес эл. почты можно использовать только для одной учетной записи или устройства Lokki.",
     "reset.serverMessage": "<html><body>Уважаемый пользователь Lokki!<br/><br/>Теперь вы можете выполнить вход в Lokki. Это нужно сделать в течение двух часов. После входа вы увидите те же контакты и настройки Lokki, что и раньше.<br/><br/>Обратите внимание, что один адрес эл. почты можно использовать только для одной учетной записи или устройства Lokki.</body></html>",
