--- a/i18n/resources-locale_en-US.json
+++ b/i18n/resources-locale_en-US.json
@@ -20,9 +20,10 @@
     "notification.friendRemoved" : "Lokki friend removed: %friendName%",
     "notification.friendDeclinedInvitation" : "%friendName% declined your Lokki friend invitation",
     "signup.userEmailSubject" : "Welcome to Lokki!",
-    "signup.userEmailText" : "Welcome to Lokki, the private location sharing app that's easy, secure, and free! You have successfully registered as <b>%targetUser%</b> and are now able to log in.",
+    "signup.userEmailText" : "Welcome to Lokki, the private location sharing app that's easy, secure, and free! You have successfully registered as <b>%targetUser%</b> and are now able to log in. Your account is currently in trial mode and will expire in 24 hours. Click this confirmation link to verify your account and make it permanent: %confirmationCode%",
     "invite.userInvitedToLokkiEmailSubject" : "Join me on Lokki!",
     "invite.userInvitedToLokkiEmailText" : "Hello %targetUser%!\n\nYour friend %senderUser% is inviting you to Lokki.",
+    "confirm.serverMessage": "<html><body>Dear Lokki user,<br/><br/>Your account has been successfully verified.</body></html>",
     "reset.emailSubject": "Confirm Lokki sign-up",
     "reset.emailText": "You need to confirm your Lokki account. Click this %resetLink% to do so. This link is valid for 24 hours. Make sure that you log in to Lokki within two hours after you confirm your account. This does not affect your existing contacts and settings in Lokki.\n\nNote that you cannot use the same email address for more than one Lokki account or device.",
     "reset.serverMessage": "<html><body>Dear Lokki user,<br/><br/>You can now log in to Lokki. This authorization is valid for two hours. After you log in, Lokki will have same contacts and settings as before.<br/><br/>Note that you cannot use the same email address for more than one Lokki account or device.</body></html>",
