--- a/i18n/resources-locale_en-US.json
+++ b/i18n/resources-locale_en-US.json
@@ -28,7 +28,7 @@
     "reset.emailText": "You need to confirm your Lokki account. Click this %resetLink% to do so. This link is valid for 24 hours. Make sure that you log in to Lokki within two hours after you confirm your account. This does not affect your existing contacts and settings in Lokki.\n\nNote that you cannot use the same email address for more than one Lokki account or device.",
     "reset.serverMessage": "<html><body>Dear Lokki user,<br/><br/>You can now log in to Lokki. This authorization is valid for two hours. After you log in, Lokki will have same contacts and settings as before.<br/><br/>Note that you cannot use the same email address for more than one Lokki account or device.</body></html>",
     "notify.friendLocationRequestLokkiStart": "Your Lokki friends are requesting your location. You should start Lokki to enable location reporting.",
-    "delete.request.badaddress": "<html><body>There is on user with that address.</html></body>",
+    "delete.request.badaddress": "<html><body>There is no user with that address.</html></body>",
     "delete.request.sent": "<html><body>An email has been sent to %email% <br/><br/> Please follow the instructions in that email</html></body>",
     "delete.request.sendfail": "<html><body> Could not send email to %email% <br/><br/> Try again or contact Lokki administrators</html></body>",
     "delete.emailSubject": "Confirm Lokki deletion",
